syntax = "proto3";

option go_package = "github.com/ruziba3vich/registration_ms/genprotos";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string from = 1;
  string to = 2;
  string message = 3;
}

message MessageResponse {
  string status = 1;
}
